Wrap issue details to prevent content misalignment

--- a/app/assets/stylesheets/pages/detail_page.scss
+++ b/app/assets/stylesheets/pages/detail_page.scss
@@ -16,6 +16,10 @@
   .issue_created_ago, .author_link {
     white-space: nowrap;
   }
+
+  .issue-meta {
+    margin-left: 65px
+  }
 }
 
 .detail-page-description {
